--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 title: BAPS BLR Announcements Demo
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+# theme: jekyll-theme-cayman
