--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: BAPS BLR Announcements Demo
-remote_theme: pages-themes/cayman@v0.2.0
-# theme: jekyll-theme-cayman
+description: A demo site for BAPS BLR announcements
+remote_theme: pages-themes/tactile@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
